[package]
name = "parse_csv"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Et cetera <etcetera3636@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
csv = "1.3.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
