[package]
name = "parse_csv"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Et cetera <etcetera3636@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
csv.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
