[package]
name = "ecli"
version = "0.1.0"
license = "MIT"
edition = "2021"
authors = ["Et cetera <etcetera3636@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
