[package]
name = "ecli"
version = "0.1.0"
license = "MIT"
edition = "2021"
authors = ["Et cetera <etcetera3636@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9.34"
toml = "0.8.12"
uuid = { version = "1.8.0", features = ["v4"] }
rand = "0.8.5"
